--- a/View/cadastroUsuario.html
+++ b/View/cadastroUsuario.html
@@ -17,14 +17,14 @@
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
     style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
     <div class="col-md-3 mb-2 mb-md-0">
-      <a href="../index.html" class="d-inline-flex align-items-center text-decoration-none">
+      <a href="./cadastroUsuario.html" class="d-inline-flex align-items-center text-decoration-none">
         <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
         <span class="text-white fs-4">Manual do Jovem</span>
       </a>
     </div>
   </header>
 
-  <main id="container">
+  <main class="container">
     <div id="informacoes">
       <figure>
         <img src="./img/logo.png" alt="" id="imgLogo" />
@@ -34,6 +34,7 @@
         voce poderá alterá-lo quando quiser.
       </h2>
     </div>
+    
     <form id="inputs">
       <input id="nome" class="inputText" type="text" placeholder="Nome de Usuário" required />
       <input id="email" class="inputText" type="email" placeholder="Email" required />
@@ -42,7 +43,9 @@
       <div id=divConfirmar>
         <button id="botaoConfirmar" class="buttonTheme">Confirmar</button>
       </div>
+      <p>Já possui uma conta? <a href="../index.html">Faça Login</a></p>
     </form>
+    
     <footer>
       <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
     </footer>
