--- a/View/redefinir2.html
+++ b/View/redefinir2.html
@@ -17,21 +17,11 @@
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
     style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
     <div class="col-md-3 mb-2 mb-md-0">
-      <a href="/" class="d-inline-flex align-items-center text-decoration-none">
+      <a href="./redefinir2.html" class="d-inline-flex align-items-center text-decoration-none">
         <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
         <span class="text-white fs-4">Manual do Jovem</span>
       </a>
     </div>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="./tela-profissional.html" class="nav-link px-2 icon-home ativo"
-          style="color: white;">Profissional</a>
-      </li>
-      <li><a href="./tela-financeiro.html" class="nav-link px-2 icon-criar ativo" style="color: white;"> Financeiro</a>
-      </li>
-      <li><a href="./tela-pessoal.html" class="nav-link px-2 icon-insc ativo" style="color: white;">Pessoal</a>
-      </li>
-    </ul>
   </header>
 
   <main class="container">
