--- a/View/css/cadastroUsuario.css
+++ b/View/css/cadastroUsuario.css
@@ -1,28 +1,19 @@
-/*melhorar os inputs e a escrita neles*/
-
-html,
-body {
-  overflow: hidden;
-}
-
-
-#container {
-  align-items: center;
-  height: calc(100vh - 65px - 54px);
-  width: 100%;
+.container {
   display: flex;
+  align-items: center;
   justify-content: center;
-  flex-direction: row;
 }
 
 #imgLogo {
-  width: 40%;
+  width: 80px;
   height: auto;
+  margin: 0;
 }
 
 figure {
-  height: 90px;
+  height: 80px;
   text-align: center;
+  margin: 0;
 }
 
 #breveDescricao {
@@ -57,10 +48,7 @@ figure {
   width: 270px;
 }
 
-#email,
-#senha,
-#nome,
-#confSenha {
+.inputText {
   display: block;
   margin: 1.8% auto;
   font-size: auto;
@@ -72,18 +60,29 @@ figure {
 }
 
 
-@media screen and (max-width: 721px) {
+@media screen and (max-width: 767px) {
 
-  #container {
+  .container {
+    padding-top: 120px;
     flex-direction: column;
   }
 
-  #inputs {
-    width: 400px;
+  #Titulo {
+    font-size: 30px;
   }
 
   #informacoes {
     margin-right: 0;
-    align-items: center;
+    width: 300px;
   }
+
+  #inputs {
+    width: 300px;
+    height: 280px;
+  }
+
+  .inputText {
+    width: 280px;
+  }
+
 }
