--- a/View/css/contato.css
+++ b/View/css/contato.css
@@ -1,12 +1,9 @@
-/*fazer o transform e o transition ajeitar TEXTAREA*/
-
   .container {
-    width: 300px;
-    margin: 40px auto;
-    text-align: center;
-
+    align-content: center;
+    align-items: center;
+    justify-items: center;
   }
-  
+
   textarea {
     width: 600px;
     height: 150px;
@@ -17,11 +14,13 @@
     border-radius: 6px;
     box-shadow: 2px 2px 1px black;
   }
-  
-  .informacoes  {
-        display: flex;
+
+  .informacoes {
+    width: 600px;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    align-self: center !important;
     gap: 20px;
   }
 
@@ -33,10 +32,10 @@
     border-radius: 6px !important;
     font-weight: bold;
   }
-  
- #enviar:hover {
+
+  #enviar:hover {
     background-color: #342795;
-      transform: scale(1.01);
+    transform: scale(1.01);
   }
 
   #emailSuporte {
@@ -45,13 +44,13 @@
     display: block;
   }
 
-  p{
+  p {
     color: white;
     margin: 0 !important;
   }
-  
-  h2{
-    text-align: left;
+
+  h2 {
+    text-align: center;
     width: 400px;
-    color: white;
+    color: white !important;
   }
