--- a/View/css/globalStyle.css
+++ b/View/css/globalStyle.css
@@ -1,70 +1,20 @@
+/*Estilização Padrão Para Todo o Site*/
 * {
   margin: 0%;
   padding: 0%;
+  font-family: "Poppins", sans-serif;
 }
 
 html,
-body{
-  font-family: "Poppins", sans-serif;
+body {
+  overflow-x: hidden;
+  min-height: 100vh;
+  min-width: 100vw !important;
   background: linear-gradient(to bottom, #182031, #28334b);
 }
 
-html  {
-  height: 100vh;
-  width: 100vw;
-}
 
-body  {
-  height: 100%;
-  width: 100%;
-}
-
-p {
-  margin: 0;
-}
-
-#Titulo {
-  text-align: center;
-  color: #f9fafb;
-  font-size: 50px;
-  margin: 0;
-}
-
-.buttonTheme {
-  background-color: #6152cd;
-  color: white;
-  border: none;
-  padding: 12px;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.buttonTheme:hover {
-  background-color: #342795;
-  transform: scale(1.01);
-  cursor: pointer;
-}
-
-footer {
-  width: 100%;
-  height: 54px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  padding: 0;
-  align-items: center;
-  font-size: 0.9rem;
-  color: rgb(255, 255, 255);
-  box-shadow: inset 2px -2px 3px #263044;
-  background: linear-gradient(50deg, #4c4199, #111827);
-}
-
+/*Estilização do Header (CSS Global)*/
 .me-2 {
   margin-left: 0.5rem !important;
 }
@@ -86,6 +36,22 @@ ul.nav.col-12 {
   justify-self: right;
 }
 
+.nav-link:hover {
+  color: aliceblue;
+}
+
+.py-3 {
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+header {
+  width: 100% !important;
+}
+
+
+/*Parte de Logo (imagem e em escrita)*/
 img {
   height: 40px;
   width: 40px;
@@ -94,16 +60,9 @@ img {
 #logo {
   height: 60% !important;
   width: 3% !important;
-  margin-left: 90%;
   border-bottom: 1px 0 0 solid black !important;
 }
 
-#abaInfos {
-  width: 100%;
-  height: 13vh;
-  display: flex;
-  align-items: center;
-}
 
 #logoFigure {
   width: 70px;
@@ -134,10 +93,27 @@ img {
   border: none;
 }
 
-.hidden {
-  display: none !important;
+
+/*Área da Foto de Perfil*/
+#fotoBtn {
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  padding: 0 !important;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
+#fotoImg {
+  height: 55px;
+  width: 55px;
+  border: 2px solid white;
+  border-radius: 50px;
+}
+
+
+/*Área de opções ao clicar na foto de perfil*/
 #divInfos {
   width: 210px;
   flex-direction: column;
@@ -158,21 +134,14 @@ img {
   display: flex;
 }
 
+.hidden {
+  display: none !important;
+}
+
 #opcoesPerfil {
   display: flex;
   flex-direction: column;
   transition: 3ms;
-}
-
-.py-3 {
-  width: 100%;
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
-li {
-  padding-top: 0.5rem !important;
-
 }
 
 .hrefPerfil {
@@ -181,19 +150,90 @@ li {
   text-decoration: none;
 }
 
-#fotoBtn {
-  width: 70px;
+.hrefOpcoesAreas {
+  display: none;
+  margin-left: 26px;
+  color: black;
+  text-decoration: none;
+}
+
+
+/*Estilização do Container*/
+.container {
+  width: 100%;
+  height: calc(100vh - 73px - 54px);
+  justify-self: center;
+  margin: 0;
+  padding: 0;
+}
+
+
+/*Estilização do Footer*/
+footer {
+  width: 100%;
+  height: 54px;
   display: flex;
   justify-content: center;
-  padding: 0 !important;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 0;
+  align-items: center;
+  font-size: 0.9rem;
+  color: rgb(255, 255, 255);
+  box-shadow: inset 2px -2px 3px #263044;
+  background: linear-gradient(50deg, #4c4199, #111827);
+  z-index: 99;
+}
+
+
+/*Tema padrão dos botões*/
+.buttonTheme {
+  background-color: #6152cd;
+  color: white;
   border: none;
-  background: none;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.buttonTheme:hover {
+  background-color: #342795;
+  transform: scale(1.01);
   cursor: pointer;
 }
 
-#fotoImg {
-  height: 55px;
-  width: 55px;
-  border: 2px solid white;
-  border-radius: 50px;
+p {
+  margin: 0;
+}
+
+/*@media para dispositivos de menor tamanho*/
+@media screen and (max-width: 767px) {
+  .py-3 {
+    justify-content: space-around !important;
+  }
+
+  .hrefOpcoesAreas {
+    display: block;
+  }
+
+  html::after {
+    content: "";
+    display: block;
+    height: 120px;
+    background: linear-gradient(to top, #182031, #28334b);
+  }
+
+  #opcoesHeader {
+    display: none;
+  }
+
+  .container {
+    padding-top: 120px;
+    flex-direction: column;
+  }
 }
