--- a/View/css/redefinir.css
+++ b/View/css/redefinir.css
@@ -1,5 +1,3 @@
-/*deixar mais bonito*/
-
 * {
     margin: 0;
     padding: 0;
@@ -16,20 +14,11 @@ body {
     font-size: 16px;
 }
 
-
-main    {
-    height: 100%;
-    width: 100%;
-}
-
-
-#container {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 78%;
-    width: 100%;
 }
 
 #filho1 {
@@ -46,7 +35,7 @@ main    {
     align-items: center;
 }
 
-#filho1 > *   {
+#filho1>* {
     margin: 0 !important;
     justify-self: center
 }
@@ -61,11 +50,12 @@ main    {
     font-size: 14px;
 }
 
-#inputEmail{
-    margin-bottom: -7%;;
+#inputEmail {
+    margin-bottom: -7%;
+    ;
 }
 
 
-p{
+p {
     font-size: 18px;
 }
