--- a/View/css/tela-artigos.css
+++ b/View/css/tela-artigos.css
@@ -1,10 +1,6 @@
-html {
-
-  overflow-x: hidden;
-}  
-
-.container{
-    text-align: center;
+.container {
+  text-align: center;
+  
 }
 
 .aba {
@@ -16,65 +12,57 @@ html {
   height: auto;
 
 }
+
 .aba h3 {
   margin: 0;
   font-size: 18px;
   text-align: left;
 }
+
 .aba p {
   margin: 5px 0;
   font-size: 14px;
   text-align: left;
 }
+
 .aba .author {
   text-align: right;
   font-size: 12px;
   color: #333;
 }
 
-.aba:hover{
+.aba:hover {
   background-color: #7c9696;
   transform: abaHover 1s linear infinite;
 }
 
+html::after {
+  content: "";
+  display: block;
+  height: 120px;
+  background: linear-gradient(to top, #182031, #28334b);
+}
+
 @keyframes abaHover {
   from {
-   width: 90%; 
+    width: 90%;
   }
-  to  {
+
+  to {
     width: 100%;
   }
 }
 
-#topo {
-  display: flex;
-    width: 100%;
-    height: 59px;
-    background-color: #263044;
-  }
-  
-  img {
-    height: 40px;
-    width: 40px;
-  }
-  
-  button  {
-  background-color:  #263044;
+button {
+  background-color: #263044;
   border: none;
-  }
+}
 
-  #btnConfig{
-    text-align: right;
-    width: 50%;
-    margin-top: 8px;
-    margin-right: 7px;
-  }
-
-#backFigure  {
+#backFigure {
   height: 51px;
 }
 
-#btnVoltar  {
+#btnVoltar {
   width: 50%;
   text-align: left;
   margin-top: 8px;
@@ -90,13 +78,13 @@ html {
   box-shadow: inset 2px 2px 5px #263044;
   display: flex;
   position: fixed;
-  background-color:#182031;
+  background-color: #182031;
   background-image: url("../img/pena.png");
   background-size: 70%;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-#aCriar:hover{
+#aCriar:hover {
   background-color: #28334b;
 }
