--- a/View/novaSenha.html
+++ b/View/novaSenha.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="./img/logo.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/globalStyle.css" />
+  <link rel="stylesheet" href="./css/novaSenha.css">
 </head>
 
 <body>
@@ -16,33 +17,22 @@
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
     style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
     <div class="col-md-3 mb-2 mb-md-0">
-      <a href="/" class="d-inline-flex align-items-center text-decoration-none">
+      <a href="./novaSenha.html" class="d-inline-flex align-items-center text-decoration-none">
         <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
         <span class="text-white fs-4">Manual do Jovem</span>
       </a>
     </div>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="./tela-profissional.html" class="nav-link px-2 icon-home ativo"
-          style="color: white;">Profissional</a>
-      </li>
-      <li><a href="./tela-financeiro.html" class="nav-link px-2 icon-criar ativo" style="color: white;"> Financeiro</a>
-      </li>
-      <li><a href="./tela-pessoal.html" class="nav-link px-2 icon-insc ativo" style="color: white;">Pessoal</a>
-      </li>
-    </ul>
   </header>
 
-  <main id="container">
-    <div>
-      <h2>Português (Brasil)</h2>
-      <div>
-        <p>MA</p>
-      </div>
+  <main class="container">
+
+    
+    <div id="forms">
+      <h3 id="Titulo">Insira a sua nova senha</h3>
       <form>
-        <input type="password" placeholder="Insira nova senha..." /><br /><br />
-        <input type="password" placeholder="Confirmar nova senha..." /><br /><br />
-        <button type="submit">Confirmar</button>
+        <input type="password" class="inputsInfos" id="inputPassword" placeholder="Insira nova senha..." />
+        <input type="password" class="inputsInfos" id="inputConfPassword" placeholder="Confirmar nova senha..." />
+        <button type="submit" class="buttonTheme">Confirmar</button>
       </form>
     </div>
     <footer class="footer">
